# vibeisland-linux

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  RELEASE_NOTES_beta1.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
apps/shell/: README.md  __init__.py  demo_state.json  main.py  sample_snapshot.json
apps/shell/ui/: Main.qml  PixelSprite.qml
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: main.rs
docs/: INTEGRATION_SETUP.md  INTEGRATION_SETUP.zh-CN.md  PRD.md  PRD.zh-CN.md  README.md  README.zh-CN.md  TECHNICAL_DESIGN.md  TECHNICAL_DESIGN.zh-CN.md
media/: README.md
tools/: __init__.py  demo_agent.py  vibeisland.py
