[workspace]
members = [
  "crates/common",
  "crates/daemon",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0-beta.1"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
