[package]
name = "vibeisland-daemon"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dirs = "6.0"
rusqlite = { version = "0.37", features = ["chrono"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
vibeisland-common = { path = "../common" }
